Header styling fixes when WP admin bar is visible

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -42,3 +42,5 @@ $h-header-top:                32px;
 $h-search-mobile:             55px;
 $h-nav-cats:                  45px;
 $h-footer:                    60px;
+$h-wp-adminbar-mobile:        46px;
+$h-wp-adminbar-desktop:       32px;
